# carapace-utils

./: .bazelrc  .clang-tidy  .gitignore  BUILD.bazel  CMakeLists.txt  LICENSE  README.md  WORKSPACE  carapaced.bazelproject  code-cleanup.sh
apps/dash/: CMakeLists.txt  carapace_dash.cc
apps/greeter/: CMakeLists.txt  greeter_client.cc
apps/server/: CMakeLists.txt  server.cc
clients/: BUILD  greeter_client.cc
common/modules/: BUILD
executables/dash/: BUILD  CMakeLists.txt  carapace_dash.cc
include/carapace-utils/: base_module.h
protos/: BUILD  CMakeLists.txt  helloworld.proto
server/: BUILD  server.cc
src/: CMakeLists.txt
